# haar-like-feature

./: .gitignore  CMakeLists.txt  cardetect.cpp  readme.txt
data/: cascade.xml  params.xml  stage0.xml
